Added some to tex

--- a/references.bib
+++ b/references.bib
@@ -5,3 +5,47 @@
   year         = {2026},
   note         = {Accessed: 2026-02-01}
 }
+
+@misc{kalshiContracts,
+  author       = {{Kalshi}},
+  title        = {Working with Event Contracts},
+  howpublished = {\url{https://news.kalshi.com/p/what-are-event-contracts}},
+  year         = {2026},
+  note         = {Accessed: 2026-02-01}
+}
+
+@misc{kalshiPricing,
+  author       = {{Kalshi}},
+  title        = {How are prices determined?},
+  howpublished = {\url{https://help.kalshi.com/markets/markets-101/how-are-prices-determined}},
+  year         = {2026},
+  note         = {Accessed: 2026-02-02}
+}
+@misc{kalshiSabrina,
+  author       = {{Kalshi}},
+  title        = {How many Grammy awards will Sabrina Carpenter win?},
+  howpublished = {\url{https://kalshi.com/markets/kxgrammycountsab/award/kxgrammycountsab-26}},
+  year         = {2026},
+  note         = {Accessed: 2026-02-02}
+}
+@misc{kalshiLady,
+  author       = {{Kalshi}},
+  title        = {How many Grammy awards will Lady Gaga win?},
+  howpublished = {\url{https://kalshi.com/markets/kxgrammycountlad/award/kxgrammycountlad-26}},
+  year         = {2026},
+  note         = {Accessed: 2026-02-02}
+}
+@misc{kalshiKendrick,
+  author       = {{Kalshi}},
+  title        = {How many Grammy awards will Kendrick Lamar win?},
+  howpublished = {\url{https://kalshi.com/markets/kxgrammycountken/award/kxgrammycountken-26}},
+  year         = {2026},
+  note         = {Accessed: 2026-02-02}
+}
+@misc{kalshiBad,
+  author       = {{Kalshi}},
+  title        = {How many Grammy awards will Bad Bunny win?},
+  howpublished = {\url{https://kalshi.com/markets/kxgrammycountbad/award/kxgrammycountbad-26}},
+  year         = {2026},
+  note         = {Accessed: 2026-02-02}
+}
