--- a/references.bib
+++ b/references.bib
@@ -49,3 +49,25 @@
   year         = {2026},
   note         = {Accessed: 2026-02-02}
 }
+@misc{courseworkRepo,
+  author = {Cyrus Chan},
+  title = {coursework-stats-modelling},
+  year = {2026},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/chc4036/coursework-stats-modelling}},
+  note = {Accessed: 2026-02-04}
+}
+@article{751b9a41-8bf7-3560-b35d-227c8740b0f2,
+ ISSN = {00029556},
+ URL = {http://www.jstor.org/stable/1418469},
+ author = {R. M. Griffith},
+ journal = {The American Journal of Psychology},
+ number = {2},
+ pages = {290--294},
+ publisher = {University of Illinois Press},
+ title = {Odds Adjustments by American Horse-Race Bettors},
+ urldate = {2026-02-04},
+ volume = {62},
+ year = {1949}
+}
