--- a/coursework.tex
+++ b/coursework.tex
@@ -13,6 +13,7 @@
 \usepackage{fancyhdr}
 \usepackage[numbers,sort&compress]{natbib}
 \usepackage{array}
+\usepackage{capt-of}
 \hypersetup{
     colorlinks=true,
     citecolor=blue, % Change 'blue' to your preferred color (e.g., black, navyblue, red)
@@ -22,7 +23,7 @@
 \pagestyle{fancy}
 
 \title{Estimating the Market Efficiency of Prediction Markets}
-\author{author}
+\author{Cyrus Chan CID: 02560148}
 \date{}
 
 \begin{document}
@@ -37,8 +38,7 @@ based on the outcome of future events.\cite{investopediaPredictionMarkets}
 Prediction markets are said to be more accurate than expert opinions, as 
 it magnifies the "wisdom of the crowd" to a larger scale. \cite{investopediaPredictionMarkets}\\
 I chose this question as I was curious about the effectiveness and accuracy 
-of analysing the prices of the contracts in events that we would like to know the outcome
-of.
+of analysing the prices of the contracts to predict the outcome of events that we are interested in.
 
 
 \section{Background}
@@ -53,16 +53,14 @@ market's perceived probability of a specific event occurring.\cite{kalshiPricing
 
 \section{Model}
 
-The outcome of a contract is either it happens or it doesn't, so we can model this as a Bernoulli
+The outcome of a contract is either it resolves to YES or NO, so we can model this as a Bernoulli
 distribution.
 \\
-Let $y_1, \dots, y_n$ be a sample of outcomes related to Kalshi contracts. 
+Let $y_1, \dots, y_n$ be a sample of the outcomes related to Kalshi contracts. 
 We can model these as realisations of a random variable $Y_i$ for $i = 1, \ldots, n$.
 \[
 Y_i \sim \{ \text{Bernoulli}(p_i) : p_i \in [0, 1] \}
 \]
-Where $Y_i = 1$ is the event where the market resolves to YES and $Y_i = 0$ is the event where 
-the market resolves to NO, and $p_i$ is the probability the event occurs.\\
 We will take the market price of a contract at each time period as $x_i$ cents.
 Since $x_i \in [0,1]$, It can be said that if the market were perfectly efficient, $x_i = p_i$.
 Therefore, we will model each $p_i$ as such:
@@ -81,6 +79,7 @@ p_i = x_i^{\theta}
 \end{tabular}
 \end{center}
 As $\theta < 1 \Rightarrow x_i < p_i$ and $\theta > 1 \Rightarrow x_i >   p_i$
+\pagebreak
 \section{Data Observations}
 The markets we will collect data from are respectively:\\
 1.How many Grammy awards will Sabrina Carpenter win?\cite{kalshiSabrina}\\
@@ -92,14 +91,14 @@ so it can be assumed that the distribution their contract prices and event proba
 will be similar. \\
 We will collect the data from 12 November 2025 to 25 January 2026, using the 'minute' 
 frequency available on Kalshi. The actual date of the Grammy Awards was 1 February 2026. 
-The date 25 January 2026 was chosen so that there would be less effects of volatility during 
-the award show affecting the prices. Each of these markets have 7 different contracts, which respectively 
+The date 25 January 2026 was chosen so that there would be less effects of high price fluctuations during 
+the award shows. Each of these markets have different contracts, which respectively 
 pay out based on the number of awards each performer wins, from exactly 0 to 9.
 \\
 \begin{center}
-\begin{tabular}{ | m{8em} | m{13em}| } 
+\begin{tabular}{ | m{8em} | m{10em}| } 
   \hline
-  Performer & Number of Grammy Awards won  \\ 
+  Performer & Actual number of Grammy Awards won  \\ 
   \hline
   Sabrina Carpenter & 0 \\ 
   \hline
@@ -121,6 +120,20 @@ y_i =
       0 & \text{if the contract did not pay out}
 \end{cases}
 \]
+\begin{center}
+\begin{tabular}{ | m{8em} | m{6em}| m{6em}| m{6em}| m{6em}|}
+\hline
+Timestamp & Exactly 0 & Exactly 1 & Exactly 2 & Exactly 3\\ 
+\hline
+2025-11-18 21:30:00 & 26.00 & 30.00 & 24.00 & 22.00 \\  
+\hline
+2025-11-19 01:15:00 & 26.00& 36.00 & 24.00 & 22.00  \\  
+\hline
+\end{tabular}
+\captionof{table}{A snippet of the data being processed.\cite{kalshiSabrina} For example, 
+this means that at 2025-11-19 21:30:00, the price for a contract predicting Exactly 0 
+awards won by Sabrina Carpenter was \$0.26}
+\end{center}
 
 \pagebreak
 \section{Deriving the MLE of $\theta$}
@@ -144,7 +157,7 @@ Using the scipy function scipy.optimize.minimize, we can find the minimum of $\t
 find the $\theta$ with the maximum $L(\theta)$
 
 \begin{center}
-\begin{tabular}{ | m{8em} | m{13em}| } 
+\begin{tabular}{ | m{8em} | m{6em}| } 
   \hline
   Market & $\text{MLE of } \theta$  \\ 
   \hline
@@ -157,26 +170,59 @@ find the $\theta$ with the maximum $L(\theta)$
   Bad Bunny & 1.1976 \\
   \hline
 \end{tabular}
+\captionof{table}{Values for the minimum of the log-likelihood function calculated using python \cite{courseworkRepo}}
 \end{center}
 
+\section{Analysis of findings}
 The data shown when calculating the MLE of $\theta$ seems to show that the price $x_i$ of the contracts are 
 consistently overpriced. Which means, the probability of the event actually happening was lower than what 
-the price would indicate on the Kalshi market. This indicates a systematic market inefficiency, possibly due to
+the prices would indicate on the Kalshi market. This indicates a systematic market inefficiency. 
+There could be a few explainations for this:
+\subsection{Favorite-Longshot Bias}
+In prediction and betting markets, people overvalue longshots (outcomes with low probability), 
+because the potential payout is much greater. In the context of horse-race beting, there is a 
+systematic undervaluation of the odds of favourite winners, and an overvaluation of "dark horses". \cite{751b9a41-8bf7-3560-b35d-227c8740b0f2}
+In the context the data anaylsed here, it could be that traders are more inclined to purchase contracts with lower odds, leading to a positive
+bias to the prices.
+\subsection{Optimism bias}
+As this market specifically is based on the entertainment and music industry, unlike some other markets 
+traded on Kalshi, such as those based on inflation or Federal Reserve interest rates, the markets 
+analysed in this dataset could be traded by fans of the artists, which could lead to sentiment-driven 
+trading, with a higher bias towards hoping the artists would win awards. This is especially prominent for the artists 
+who won more awards: Lady Gaga, Kendrick Lamar and Bad Bunny. \\
+These artists had a higher MLE of $\theta$, as such, it implies that traders expected these artists to 
+receive more awards. In contrast, there was a lower MLE value of $\theta$ for Sabrina Carpenter winning 0 awards.
+
+
 
 
 
 \pagebreak
-
 \section{Conclusion}
+For the markets analysed in this report, specifically related to the entertainment and 
+music industry, there appears to be a significant inefficiency in the price of the contracts, 
+as the price of the contracts appear to be systemically overpriced across the board. \\
+The time span chosen is meant to be when there is less information regarding the award winners, due to 
+cutting off the data analysed by around a week before the award shows. If the data was taken nearer to 
+when the award show occurs, traders may have had more information to make better trades, and the price 
+point would be closer to the true probability of the event occuring. \\
+In conclusion, the market efficiency seems to be low  in this case, and using the market price 
+to predict the outcome of the events related to the contracts is likely unfeasible. However, 
+the prices are better used as an estimate of the sentiment of the crowd.
 
-We did some experiments \ldots
+
+
+
+\section{Critical Use of AI}
+I used Google Gemini in order to debug and optimize the code I wrote, 
+and to help format my LaTeX code. I also used it to help link my findings with 
+the favorite-longshot bias.1
+
+
+
+
 
 \pagebreak
-
-\section{Conclusions and Future Work}
-
-From our experiments we can conclude that \ldots
-
 \bibliographystyle{unsrtnat}
-\bibliography{references}  % need to put bibtex references in references.bib 
+\bibliography{references}
 \end{document}
